monitor/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - grafana.cuiqingcai.com
      secretName: tls-grafana-cuiqingcai-com
  rules:
    - host: grafana.cuiqingcai.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
